--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,6 +9,12 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+      # Caching dependencies
+      - name: Caching dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: deps-node-module-${{ hashFiles('**/package.lock.json') }}
       - name: Install dependencies
         run: npm ci
       - name: Lint code
@@ -24,6 +30,13 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+
+      # Caching dependencies
+      - name: Caching dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: deps-node-module-${{ hashFiles('**/package.lock.json') }}
       - name: Install dependencies
         run: npm ci
       - name: Build website
