--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
 
-      # Caching dependencies
+      # Caching dependencies if not available
       - name: Caching dependencies
         uses: actions/cache@v3
         with:
